# tradingview

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: tradingview-crawl.md
.github/workflows/: deploy.yml
app/: adoption_metrics.py  adoption_scheduler.py  db.py  db_monitoring.py  dispatch_adapter.py  main.py  mcp_server.py  monitoring.py  news_cache.py  paperclip_dispatch_integration.py  paperclip_drift_monitor.py  runner.py  scheduler.py  shopping_analytics_api.py  slack_notifier.py
app/collectors/: bithumb.py  crypto.py  dart_disclosures.py  exchange_1m.py  market_archive.py  naver_kis_canary_universe.py  naver_stocks.py  stocks.py  upbit.py
docs/: ADOPTION_METRICS_GUIDE.md  BUILD_DEPLOYMENT.md  DATABASE_MONITORING.md  DATABASE_RECOVERY.md  DEVELOPMENT.md  DISPATCH_ADAPTER_GUIDE.md  MIGRATION_SUMMARY.md  PAPERCLIP_DRIFT_TROUBLESHOOTING.md  POSTGRES_MIGRATION.md  QUICK_MIGRATION_START.md  SETUP_TROUBLESHOOTING.md  k8s-db-recovery-job.yaml  shopping-kpi-operations.md
scripts/: collect_jobs.py  diagnose_and_recover.sh  diagnose_db.py  migrate_to_postgres.py  monitor-drift.py  recompute_shopping_kpis.py  verify_migration.py
tests/: conftest.py  test_adoption_metrics.py  test_api.py  test_collect_jobs.py  test_db_monitoring_postgres.py  test_dispatch_adapter.py  test_exchange_1m_postgres.py  test_naver_kis_canary_universe.py  test_news_cache.py  test_paperclip_drift_monitor.py  test_postgres_contract.py  test_shopping_kpi.py
vector_store/dashboard/: daily_stats.json  kpi_snapshot.json  (+1 more)
