[project]
name = "tradingview-crawl"
version = "0.1.0"
description = "Market data crawling server for stocks and crypto"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "mcp>=1.2,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
