[project]
name = "tradingview-crawl"
version = "0.1.0"
description = "Market data crawling server for stocks and crypto"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "mcp>=1.2,<2.0",
    "psycopg[binary]>=3.1",
    # 2026-05-31: 거래소 1m 통합 collector
    "ccxt>=4.5.54,<5.0",
    "yfinance>=1.2.0,<2.0",
    "lxml>=4.9.0",
    "pandas>=2.1.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
